<resources>
    <string name="app_name">AndroidTutorial</string>

    <string-array name="main_menu">
        <item>Calculator</item>
        <item>FlowLayout</item>
        <item>TopBar</item>
        <item>ArcMenu</item>
        <item>ScratchCard</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="title_activity_flow_layout">FlowLayoutActivity</string>

    <!-- all the button hints goes here-->
    <string name="button_number_0">0</string>
    <string name="button_number_1">1</string>
    <string name="button_number_2">2</string>
    <string name="button_number_3">3</string>
    <string name="button_number_4">4</string>
    <string name="button_number_5">5</string>
    <string name="button_number_6">6</string>
    <string name="button_number_7">7</string>
    <string name="button_number_8">8</string>
    <string name="button_number_9">9</string>
    <string name="button_number_point">.</string>


    <string name="button_operator_plus">+</string>
    <string name="button_operator_minus">-</string>
    <string name="button_operator_multiple">*</string>
    <string name="button_operator_divisor">/</string>
    <string name="button_operator_equal">=</string>
    <string name="button_operator_clear">C</string>

    <string name="result">Result goes here</string>
    <string name="title_activity_top_bar">TopBarActivity</string>
    <string name="title_activity_arc_menu">ArcMenuActivity</string>
    <string name="title_activity_scratch_card">ScratchCardActivity</string>
</resources>
