<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:stretchColumns="*">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:editable="false"
        android:gravity="right"
        android:hint="@string/result"
        android:textSize="100sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_number_7"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_7" />

        <Button
            android:id="@+id/button_number_8"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_8" />

        <Button
            android:id="@+id/button_number_9"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_9" />

        <Button
            android:id="@+id/button_operator_plus"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_operator_plus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_number_4"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_4" />

        <Button
            android:id="@+id/button_number_5"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_5" />

        <Button
            android:id="@+id/button_number_6"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_6" />

        <Button
            android:id="@+id/button_operator_minus"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_operator_minus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_number_1"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_1" />

        <Button
            android:id="@+id/button_number_2"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_2" />

        <Button
            android:id="@+id/button_number_3"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_3" />

        <Button
            android:id="@+id/button_operator_multiple"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_operator_multiple" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_operator_clear"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_operator_clear" />

        <Button
            android:id="@+id/button_number_0"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_0" />

        <Button
            android:id="@+id/button_number_point"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_number_point" />

        <Button
            android:id="@+id/button_operator_divisor"
            style="@style/CalculatorButtonTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_operator_divisor" />
    </TableRow>

    <Button
        android:id="@+id/button_operator_equal"
        style="@style/CalculatorButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/button_operator_equal" />
</TableLayout>